src/templates/masonry/css/masonry.css
/* Base styles */
.fg-masonry * {
	box-sizing: border-box;
}
.foogallery.fg-masonry {
    --fg-gutter: 10px;
    --fg-column-width: 100%;
    --fg-col2-width: calc( calc( 100% - calc( var(--fg-gutter) * 1 ) ) / 2 );
    --fg-col3-width: calc( calc( 100% - calc( var(--fg-gutter) * 2 ) ) / 3 );
    --fg-col4-width: calc( calc( 100% - calc( var(--fg-gutter) * 3 ) ) / 4 );
    --fg-col5-width: calc( calc( 100% - calc( var(--fg-gutter) * 4 ) ) / 5 );
    --fg-col6-width: calc( calc( 100% - calc( var(--fg-gutter) * 5 ) ) / 6 );
	margin: 0 auto;
	text-align: center;
}
.fg-masonry .fg-thumb {
	display: block;
}
.fg-masonry.fg-fixed .fg-item,
.fg-masonry.fg-fixed .fg-image,
.fg-masonry.fg-fixed .fg-column-width {
	max-width: 100%;
}

.fg-masonry .fg-column-width {
	display: inline-block;
	border: solid 0 transparent;
}
.fg-masonry .fg-column-width,
.fg-masonry .fg-gutter-width {
	position: absolute;
	height: 0;
	visibility: hidden;
	opacity: 0;
	pointer-events: none;
}

.fg-masonry.fg-fixed .fg-item .fg-image,
.fg-masonry.fg-col6 .fg-item .fg-image,
.fg-masonry.fg-col5 .fg-item .fg-image,
.fg-masonry.fg-col4 .fg-item .fg-image,
.fg-masonry.fg-col3 .fg-item .fg-image,
.fg-masonry.fg-col2 .fg-item .fg-image {
	width: 100%;
	height: auto;
	max-width: 100%;
}

.fg-masonry .fg-item {
	line-height: 0;
	font-size: 0;
	vertical-align: top;
}

.fg-masonry.fg-col2 {
    --fg-column-width: var(--fg-col2-width);
}
.fg-masonry.fg-col3 {
    --fg-column-width: var(--fg-col3-width);
}
.fg-masonry.fg-col4 {
    --fg-column-width: var(--fg-col4-width);
}
.fg-masonry.fg-col5 {
    --fg-column-width: var(--fg-col5-width);
}
.fg-masonry.fg-col6 {
    --fg-column-width: var(--fg-col6-width);
}

/* Force 5 column layout < 1280px */
@media screen and (max-width: 1280px) {
    .fg-masonry.fg-col6 {
        --fg-column-width: var(--fg-col5-width);
    }
}
/* Force 4 column layout < 1024px */
@media screen and (max-width: 1024px) {
    .fg-masonry.fg-col5,
    .fg-masonry.fg-col6 {
        --fg-column-width: var(--fg-col4-width);
    }
}
/* Force 3 column layout < 720px */
@media screen and (max-width: 720px) {
    .fg-masonry.fg-col4,
    .fg-masonry.fg-col5,
    .fg-masonry.fg-col6 {
        --fg-column-width: var(--fg-col3-width);
    }
}
/* Force 2 column layout < 480px */
@media screen and (max-width: 480px) {
    .fg-masonry.fg-col3,
    .fg-masonry.fg-col4,
    .fg-masonry.fg-col5,
    .fg-masonry.fg-col6 {
        --fg-column-width: var(--fg-col2-width);
    }
}
/* Force 1 column layout < 320px */
@media screen and (max-width: 320px) {
    .fg-masonry.fg-col2,
    .fg-masonry.fg-col3,
    .fg-masonry.fg-col4,
    .fg-masonry.fg-col5,
    .fg-masonry.fg-col6 {
        --fg-gutter: 0;
        --fg-column-width: 100%;
    }
}

.fg-masonry .fg-item { margin-bottom: var(--fg-gutter); width: var(--fg-column-width); }
.fg-masonry .fg-column-width { width: var(--fg-column-width); }
.fg-masonry .fg-gutter-width { width: var(--fg-gutter); }

/* Border Styles - We must apply width changing border styles to the fg-column-width element so that the plugin can correctly determine the item widths. */
.foogallery.fg-border-thin .fg-column-width {
	border-width: 4px;
}
.foogallery.fg-border-medium .fg-column-width {
	border-width: 10px;
}
.foogallery.fg-border-thick .fg-column-width {
	border-width: 16px;
}

/* Captions Bottom */
.foogallery.fg-masonry.fg-captions-bottom .fg-item-inner .fg-caption {
	display: flex;
	visibility: visible;
	opacity: 1;
	font-size: 13px;
	position: relative;
	top: auto;
	bottom: auto;
	left: auto;
	right: auto;
	width: auto;
	height: auto;
	text-transform: none;
	transform: none;
	transition: none;
	background-color: transparent;
	border: none;
	text-align: left;
}
.foogallery.fg-masonry.fg-captions-bottom.fg-c-l .fg-item-inner .fg-caption {
	text-align: left;
}
.foogallery.fg-masonry.fg-captions-bottom.fg-c-c .fg-item-inner .fg-caption {
	text-align: center;
}
.foogallery.fg-masonry.fg-captions-bottom.fg-c-r .fg-item-inner .fg-caption {
	text-align: right;
}
.foogallery.fg-masonry.fg-captions-bottom.fg-c-j .fg-item-inner .fg-caption {
	text-align: justify;
}
.foogallery.fg-masonry.fg-captions-bottom .fg-item-inner:hover .fg-caption {
	transform: none;
	transition: none;
}
.foogallery.fg-masonry.fg-captions-bottom .fg-item-inner .fg-caption-inner {
	display: flex;
	position: relative;
	max-height: none;
	top: auto;
	bottom: auto;
	left: auto;
	right: auto;
	width: auto;
	height: auto;
	border: none;
	transform: none;
	transition: none;
}
.foogallery.fg-masonry.fg-captions-bottom .fg-item-inner .fg-caption-inner:before {
	display: none;
}
.foogallery.fg-masonry.fg-captions-bottom.fg-caption-hover .fg-item-inner .fg-image-overlay {
	display: block;
}
.foogallery.fg-masonry.fg-captions-bottom.fg-caption-always .fg-item-inner:hover .fg-caption {
	visibility: visible;
	opacity: 1;
}
.fg-masonry.fg-captions-bottom .fg-caption-desc,
.fg-masonry.fg-captions-bottom .fg-caption-desc a {
	transition-property: color;
}

.fg-masonry.fg-captions-bottom.fg-dark .fg-caption,
.fg-masonry.fg-captions-bottom.fg-dark .fg-caption a {
	color: #FFF;
	border-bottom: 1px solid currentColor;
}
.fg-masonry.fg-captions-bottom.fg-light .fg-caption,
.fg-masonry.fg-captions-bottom.fg-light .fg-caption a {
	color: #222;
	border-bottom: 1px solid currentColor;
}
.fg-masonry.fg-captions-bottom.fg-light .fg-caption a:hover,
.fg-masonry.fg-captions-bottom.fg-dark .fg-caption a:hover {
	border-bottom: none;
}
.fg-masonry.fg-captions-bottom.fg-dark .fg-caption-desc,
.fg-masonry.fg-captions-bottom.fg-dark .fg-caption-desc a {
	color: #ccc;
}
.fg-masonry.fg-captions-bottom.fg-light .fg-caption-desc,
.fg-masonry.fg-captions-bottom.fg-light .fg-caption-desc a {
	color: #828282;
}
/* ... */

